--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.2",
     "svelte": "^5.15.0",
+    "tailwindcss": "^4.0.6",
     "vite": "^6.0.5"
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.0.6"
   }
 }
